[package]
name = "auction-contract"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.2.6"
cosmwasm-std = "1.2.6"
cw-multi-test = { version = "0.16.5", optional = true }
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.12"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
cw-multi-test = "0.16.5"
